--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -7,6 +7,8 @@ $gray: #5C5C5C;
 $gray2: #AAAAAA;
 $gray3: #888E93;
 $black: #2C2C2C;
+$black1: #3E3E3E;
+$black2: #4C4C4C;
 $blue: #005AA3;
 $blue2: #014379;
 $blue3: #F0F4FB;
